--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,23 +1,1 @@
-{
-  "current": "Default",
-  "presets": {
-    "Default": {
-      "ajax_cart_method": "drawer",
-      "cart_notes_enable": true,
-      "color_body_bg": "#fff",
-      "color_body_text": "#333333",
-      "color_borders": "#e5e5e5",
-      "color_footer_bg": "#f2f2f2",
-      "color_footer_social_link": "#bbbbbb",
-      "color_footer_text": "#636363",
-      "color_primary": "#747474",
-      "color_secondary": "#bbb",
-      "favicon_enable": false,
-      "footer_newsletter_enable": true,
-      "footer_social_enable": true,
-      "logo_use_image": false,
-      "social_facebook_link": "",
-      "social_twitter_link": ""
-    }
-  }
-}
+{"current":{"color_primary":"#747474","color_secondary":"#bbb","color_borders":"#e5e5e5","color_body_bg":"#fff","color_body_text":"#333333","color_footer_bg":"#f2f2f2","color_footer_text":"#636363","color_footer_social_link":"#bbbbbb","logo_use_image":true,"logo_max_width":"450","favicon_enable":false,"footer_social_enable":true,"footer_newsletter_enable":true,"newsletter_form_action":"","cart_notes_enable":true,"cart_vendor_enable":false,"ajax_cart_method":"drawer","social_twitter_link":"https:\/\/twitter.com\/shopify","social_facebook_link":"https:\/\/www.facebook.com\/shopify","checkout_use_header_image":false,"checkout_header_image":"","checkout_logo":"","checkout_logo_image":"","checkout_logo_position":"left","checkout_logo_size":"medium","checkout_use_body_background_image":false,"checkout_body_background_image":"","checkout_body_background_color":"#fff","checkout_input_background_color_mode":"white","checkout_use_sidebar_background_image":false,"checkout_sidebar_background_image":"","checkout_sidebar_background_color":"#fafafa","checkout_heading_font":"Helvetica Neue","checkout_body_font":"Helvetica Neue","checkout_accent_color":"#1990C6","checkout_button_color":"#1990C6","checkout_error_color":"#ff6d6d"},"presets":{"Default":{"ajax_cart_method":"drawer","cart_notes_enable":true,"color_body_bg":"#fff","color_body_text":"#333333","color_borders":"#e5e5e5","color_footer_bg":"#f2f2f2","color_footer_social_link":"#bbbbbb","color_footer_text":"#636363","color_primary":"#747474","color_secondary":"#bbb","favicon_enable":false,"footer_newsletter_enable":true,"footer_social_enable":true,"logo_use_image":false,"social_facebook_link":"","social_twitter_link":""}}}
